Did some needed restructuring in HashTools.cs. Added a first try at auto-search for a like-named text file which may contain a hash value for the file just hashed. Not a fully stable commit

--- a/trunk/BDFileHash/BDFileHash.csproj
+++ b/trunk/BDFileHash/BDFileHash.csproj
@@ -81,6 +81,7 @@
       <DependentUpon>AboutDialog.cs</DependentUpon>
     </Compile>
     <Compile Include="DBHashLib.cs" />
+    <Compile Include="Enums.cs" />
     <Compile Include="FileTools.cs" />
     <Compile Include="frmFileHash.cs">
       <SubType>Form</SubType>
