Add Status control; Add user settings and new settings form; This commit not stable

--- a/trunk/BDFileHash/app.config
+++ b/trunk/BDFileHash/app.config
@@ -14,13 +14,13 @@
                 <value>1048576</value>
             </setting>
             <setting name="MD5RegEx" serializeAs="String">
-                <value>([0-9a-fA-F]{32})</value>
+                <value>^([0-9a-fA-F]{32})$</value>
             </setting>
             <setting name="SHA1RegEx" serializeAs="String">
-                <value>([0-9a-fA-F]{40})</value>
+                <value>^([0-9a-fA-F]{40})$</value>
             </setting>
             <setting name="SHA256RegEx" serializeAs="String">
-                <value>([0-9a-fA-F]{64})</value>
+                <value>^([0-9a-fA-F]{64})$</value>
             </setting>
         </BDFileHash.Properties.Settings>
     </applicationSettings>
@@ -28,6 +28,9 @@
         <BDFileHash.Properties.Settings>
             <setting name="DefaultHashType" serializeAs="String">
                 <value />
+            </setting>
+            <setting name="CheckLikeTextfileForHash" serializeAs="String">
+                <value>True</value>
             </setting>
         </BDFileHash.Properties.Settings>
     </userSettings>
