--- a/trunk/BDFileHash/Properties/Settings.settings
+++ b/trunk/BDFileHash/Properties/Settings.settings
@@ -6,16 +6,19 @@
       <Value Profile="(Default)">1048576</Value>
     </Setting>
     <Setting Name="MD5RegEx" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">([0-9a-fA-F]{32})</Value>
+      <Value Profile="(Default)">^([0-9a-fA-F]{32})$</Value>
     </Setting>
     <Setting Name="SHA1RegEx" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">([0-9a-fA-F]{40})</Value>
+      <Value Profile="(Default)">^([0-9a-fA-F]{40})$</Value>
     </Setting>
     <Setting Name="SHA256RegEx" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">([0-9a-fA-F]{64})</Value>
+      <Value Profile="(Default)">^([0-9a-fA-F]{64})$</Value>
     </Setting>
     <Setting Name="DefaultHashType" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="CheckLikeTextfileForHash" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
     </Setting>
   </Settings>
 </SettingsFile>
