--- a/trunk/BDFileHash/Properties/Settings.settings
+++ b/trunk/BDFileHash/Properties/Settings.settings
@@ -20,5 +20,8 @@
     <Setting Name="CheckLikeTextfileForHash" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="DefaultStartingFolder" Type="System.String" Scope="User">
+      <Value Profile="(Default)">C:\</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
