--- a/trunk/BDFileHash/app.config
+++ b/trunk/BDFileHash/app.config
@@ -32,6 +32,9 @@
             <setting name="CheckLikeTextfileForHash" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="DefaultStartingFolder" serializeAs="String">
+                <value>C:\</value>
+            </setting>
         </BDFileHash.Properties.Settings>
     </userSettings>
 </configuration>
