Fix Issue 28216, Current path not set when "Send To" used Fix Issue 28217, Add option to create checksum on load (Option in settings form) Fixed bug with search in file for hash option. Only the first file being checked This will be released with release 1.0.9

--- a/trunk/BDFileHash/Properties/Settings.settings
+++ b/trunk/BDFileHash/Properties/Settings.settings
@@ -23,5 +23,8 @@
     <Setting Name="DefaultStartingFolder" Type="System.String" Scope="User">
       <Value Profile="(Default)">C:\</Value>
     </Setting>
+    <Setting Name="HashFileOnLoad" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
