--- a/trunk/BDFileHash/app.config
+++ b/trunk/BDFileHash/app.config
@@ -35,6 +35,9 @@
             <setting name="DefaultStartingFolder" serializeAs="String">
                 <value>C:\</value>
             </setting>
+            <setting name="HashFileOnLoad" serializeAs="String">
+                <value>True</value>
+            </setting>
         </BDFileHash.Properties.Settings>
     </userSettings>
 </configuration>
