--- a/trunk/BDFileHash/app.config
+++ b/trunk/BDFileHash/app.config
@@ -14,13 +14,13 @@
                 <value>1048576</value>
             </setting>
             <setting name="MD5RegEx" serializeAs="String">
-                <value>^([0-9a-fA-F]{32})$</value>
+                <value>([\s?][0-9a-fA-F]{32}[\s?])</value>
             </setting>
             <setting name="SHA1RegEx" serializeAs="String">
-                <value>^([0-9a-fA-F]{40})$</value>
+                <value>([\s?][0-9a-fA-F]{40}[\s?])</value>
             </setting>
             <setting name="SHA256RegEx" serializeAs="String">
-                <value>^([0-9a-fA-F]{64})$</value>
+                <value>([\s?][0-9a-fA-F]{64}[\s?])</value>
             </setting>
         </BDFileHash.Properties.Settings>
     </applicationSettings>
