This release contains usability enhancements * Add SHA-512 Hashing ability * Add the ability to hash a text string * Drag and drop your file to be hashed into the "File to hash" or "File's hash" text boxes * Add option to copy calculated hash to clipboard. Default is true Stable commit Used to build release version 1.1.0

--- a/trunk/BDFileHash/BDFileHash.csproj
+++ b/trunk/BDFileHash/BDFileHash.csproj
@@ -95,6 +95,12 @@
     <Compile Include="frmFileHash.Designer.cs">
       <DependentUpon>frmFileHash.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmHashText.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmHashText.Designer.cs">
+      <DependentUpon>frmHashText.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmSettings.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -112,6 +118,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmFileHash.resx">
       <DependentUpon>frmFileHash.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmHashText.resx">
+      <DependentUpon>frmHashText.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmSettings.resx">
       <DependentUpon>frmSettings.cs</DependentUpon>
