--- a/trunk/BDFileHash/app.config
+++ b/trunk/BDFileHash/app.config
@@ -22,6 +22,9 @@
             <setting name="SHA256RegEx" serializeAs="String">
                 <value>\b[0-9a-fA-F]{64}\b</value>
             </setting>
+            <setting name="SHA512RegEx" serializeAs="String">
+                <value>\b[0-9a-fA-F]{128}\b</value>
+            </setting>
         </BDFileHash.Properties.Settings>
     </applicationSettings>
     <userSettings>
@@ -36,6 +39,9 @@
                 <value>C:\</value>
             </setting>
             <setting name="HashFileOnLoad" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="CopyHashToClipboard" serializeAs="String">
                 <value>True</value>
             </setting>
         </BDFileHash.Properties.Settings>
