--- a/trunk/BDFileHash/app.config
+++ b/trunk/BDFileHash/app.config
@@ -42,7 +42,7 @@
                 <value>True</value>
             </setting>
             <setting name="CopyHashToClipboard" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
         </BDFileHash.Properties.Settings>
     </userSettings>
