--- a/trunk/BDFileHash/BDFileHash.csproj
+++ b/trunk/BDFileHash/BDFileHash.csproj
@@ -55,6 +55,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <UseVSHostingProcess>true</UseVSHostingProcess>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -80,7 +81,6 @@
     <Compile Include="AboutDialog.Designer.cs">
       <DependentUpon>AboutDialog.cs</DependentUpon>
     </Compile>
-    <Compile Include="DBHashLib.cs" />
     <Compile Include="Enums.cs" />
     <Compile Include="FileTools.cs" />
     <Compile Include="frmBatch.cs">
