--- a/trunk/chocolatey/bdfilehash/bdfilehash.nuspec
+++ b/trunk/chocolatey/bdfilehash/bdfilehash.nuspec
@@ -12,7 +12,7 @@
     <description>BD File Hash is a convenient file hashing and hash compare tool for Windows which currently works with MD5, SHA-1, SHA-256, and SHA-512 algorithms.</description>
     <projectUrl>http://bdfilehash.codeplex.com/</projectUrl>
     <tags>bdfilehash file hash SHA1 SHA256 SHA512 MD5</tags>
-    <copyright>&copy; 2012</copyright>
+    <copyright></copyright>
     <licenseUrl>http://bdfilehash.codeplex.com/license</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <!--<iconUrl>http://cdn.rawgit.com/__CHOCO_PKG_MAINTAINER_REPO__/master/icons/bdfilehash.png</iconUrl>-->
