--- a/trunk/chocolatey/bdfilehash/bdfilehash.nuspec
+++ b/trunk/chocolatey/bdfilehash/bdfilehash.nuspec
@@ -2,18 +2,18 @@
 <!-- Do not remove this test for UTF-8: if ??? doesn?t appear as greek uppercase omega letter enclosed in quotation marks, you should use an editor that supports UTF-8, not this one. -->
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
-    <!-- Read this before publishing packages to chocolatey.org: https://github.com/chocolatey/chocolatey/wiki/CreatePackageshttps://github.com/chocolatey/chocolatey/wiki/CreatePackages -->
+    <!-- Read this before publishing packages to chocolatey.org: https://github.com/chocolatey/chocolatey/wiki/CreatePackages -->
     <id>bdfilehash</id>
     <title>BD File Hash</title>
-    <version>1.1.3</version>
+    <version>1.1.4</version>
     <authors>Brettski</authors>
     <owners>Brettski</owners>
     <summary>BD File Hash is a convenient file hashing and hash compare tool for Windows.</summary>
     <description>BD File Hash is a convenient file hashing and hash compare tool for Windows which currently works with MD5, SHA-1, SHA-256, and SHA-512 algorithms.</description>
-    <projectUrl>http://bdfilehash.codeplex.com/</projectUrl>
+    <projectUrl>https://github.com/brettski/bdfilehash</projectUrl>
     <tags>bdfilehash file hash SHA1 SHA256 SHA512 MD5</tags>
     <copyright></copyright>
-    <licenseUrl>http://bdfilehash.codeplex.com/license</licenseUrl>
+    <licenseUrl>https://github.com/brettski/bdfilehash/blob/master/license.md</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <iconUrl>http://brettski.com/f111/bdfilehash.png</iconUrl>
     <releaseNotes></releaseNotes>
